--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
   <meta charset="UTF-8">
   <link rel="icon" href="https://data.tm-dev.be/ipitup/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alternative Ipitup</title>
+  <meta name="description" content="Loading - Alternative Ipitup">
+  <meta name="keywords" content="Ipitup, Alternative Ipitup, Ipitup experience">
+  <meta name="author" content="Your Name">
+  <title>Loading - Alternative Ipitup</title>
+  <script>
+    const updateSEO = async () => {
+      try {
+        const response = await fetch('https://data.tm-dev.be/ipitup/config.json');
+        const data = await response.json();
+
+        // Update meta tags
+        document.querySelector('meta[name="description"]').content = data.seo.description;
+        document.querySelector('meta[name="keywords"]').content = data.seo.keywords;
+        document.querySelector('meta[name="author"]').content = data.seo.author;
+        document.title = data.seo.title;
+
+        // Update favicon
+        const favicon = document.querySelector('link[rel="icon"]');
+        if (favicon && data.favicon) {
+          favicon.href = data.favicon;
+        }
+      } catch (error) {
+        console.error('Failed to update SEO:', error);
+      }
+    }
+    updateSEO();
+  </script>
 </head>
 
 <body>
