--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
   <script>
     const updateSEO = async () => {
       try {
-        const response = await fetch('https://data.tm-dev.be/ipitup/config.json');
+        const response = await fetch('https://data.tm-dev.be/ipitup/api/seo',
+          {
+            method: "GET",
+            headers: {
+              "Content-Type": "application/json",
+              "Access-Control-Allow-Origin": "*",
+            },
+          }
+        );
         const data = await response.json();
 
         // Update meta tags
-        document.querySelector('meta[name="description"]').content = data.seo.description;
-        document.querySelector('meta[name="keywords"]').content = data.seo.keywords;
-        document.querySelector('meta[name="author"]').content = data.seo.author;
-        document.title = data.seo.title;
+        document.querySelector('meta[name="description"]').content = data.description;
+        document.querySelector('meta[name="keywords"]').content = data.keywords;
+        document.querySelector('meta[name="author"]').content = data.author;
+        document.title = data.title;
 
         // Update favicon
         const favicon = document.querySelector('link[rel="icon"]');
