feat light adjustments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="https://data.tm-dev.be/ipitup/favicon.ico">
+  <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Make Your Move - Alternative Ipitup">
   <meta name="keywords" content="Ipitup, Alternative Ipitup, Ipitup experience, Make Your Move  ">
